# neuro-voltron

./: .gitignore  README.md  SMOKE_TEST_RESULTS.md  TECHNICAL_REPORT.md  pyproject.toml
analysis/: plot_effectome.py  plot_flow_fields.py  plot_latent_trajectories.py  plot_messages_by_edge.py  plot_neural_reconstruction.py  plot_training_curves.py
configs/: A0_v3.json  A2_improved.json  A2_v3.json  A2_v4.json  A2_v5.json  A2_v5b.json  A2_v6.json  A2_v7.json  B2_v3.json
configs/variants/: A0.json  A1.json  A2.json  B1.json  B2.json  B3.json  C1.json  C2.json
dev_plans/: trajectory_kl_collapse.md
docs/: Techreport.md
neuro_voltron/: __init__.py  basis.py  config.py  data.py  evaluate.py  model.py  synthetic.py  train.py
scripts/: generate_synthetic_dataset.py  launch_job.sh  run_b2_a0_seeds.sh  run_ring_seeds.sh  run_smoke_tests.py  run_v4_seeds.sh  run_v4_single.sh  train_variant.py
