[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-voltron"
version = "0.1.0"
description = "Hybrid multi-region FINDR / MR-LFADS research framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "torch>=2.0",
]

[tool.setuptools.packages.find]
include = ["neuro_voltron*"]
